syntax = "proto3";

package app.v1;

import "google/type/datetime.proto";

message App {
  string id = 1;
  string name = 2;
  string slug = 3;
  string github_install_id = 4;
  string org_id = 5;
  google.type.DateTime created_at = 6;
  google.type.DateTime updated_at = 7;
}

message GetAppRequest {
  string app_id = 1;
}

message GetAppResponse {
  App app = 1;
}

message GetAppsRequest {
  string org_id = 1;
}

message GetAppsResponse {
  repeated App apps = 1;
}

message DeleteAppRequest {
  string org_id = 1;
}

message DeleteAppResponse {
  bool deleted = 1;
}

message UpsertAppRequest {
  string id = 1;
  string name = 2;
  string org_id = 3;
  string github_install_id = 4;
}

message UpsertAppResponse {
  App app = 1;
  bool is_new = 2;
}

service AppsService {
  rpc GetApp(GetAppRequest) returns (GetAppResponse) {}
  rpc GetApps(GetAppsRequest) returns (GetAppsResponse) {}
  rpc DeleteApp(DeleteAppRequest) returns (DeleteAppResponse) {}
  rpc UpsertApp(UpsertAppRequest) returns (UpsertAppResponse) {}
}
