syntax = "proto3";

package app.v1;

import "app/v1/messages.proto";

service AppsService {
  rpc GetApp(app.v1.GetAppRequest) returns (app.v1.GetAppResponse) {}
  rpc GetAppsByOrg(app.v1.GetAppsByOrgRequest) returns (app.v1.GetAppsByOrgResponse) {}
  rpc DeleteApp(app.v1.DeleteAppRequest) returns (app.v1.DeleteAppResponse) {}
  rpc UpsertApp(app.v1.UpsertAppRequest) returns (app.v1.UpsertAppResponse) {}
}
